# IT-Bootcamp-Books-and-Authors

./: README.md  pyproject.toml
.github/workflows/: testing.yml
src/: .env.dist  pytest.ini
src/api/: urls.py
src/api/authors/: urls.py
src/api/books/: urls.py
src/authors/: forms.py  models.py  serializers.py  tests.py  urls.py  views.py
src/authors/migrations/: 0001_initial.py  0002_alter_author_options_remove_author_number_and_more.py
src/books/: forms.py  models.py  serializers.py  tests.py  urls.py  views.py
src/books/migrations/: 0001_initial.py  0002_remove_book_rating.py
src/project/: settings.py  urls.py
src/templates/: base.html
src/templates/authors/: author_create.html  authors.html
src/templates/books/: book.html  book_create.html  book_delete.html  book_update.html  books.html
